--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 ---
-layout: Merlot
+layout: default
 ---
-<!DOCTYPE html>
-<html>
 <body>
 <h1>How</h1>
 <p>How is this possible 
@@ -11,4 +9,3 @@ layout: Merlot
 <br>
 ...literaiiy.me is coming soon!</p>
 </body>
-</html>
