--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <body>
-<h1>How</h1>
+<title>How</title>
+<!-- link to main stylesheet -->
+<link rel="stylesheet" type="text/css" href="/css/main.css">
 <p>How is this possible 
 <br>
 <br>
