--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <body>
-<title>How</title>
+<h1>How</h1>
 <!-- link to main stylesheet -->
 <link rel="stylesheet" type="text/css" href="/css/main.css">
 <p>How is this possible 
