--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <body>
+<title>how marble</title>
 <h1>How</h1>
 <!-- link to main stylesheet -->
 <link rel="stylesheet" type="text/css" href="/css/main.css">
