--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
 				Copyright © 2020 literaiiy. All rights reserved.
 			</div>
 		</div>
-	</footer><!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
-</body>
-</html>
+			</footer>	
+	<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5fc7507e90ec1d1b4ee1d3f7" type="text/javascript">	
+	</script>	
+	<script src="https://uploads-ssl.webflow.com/5fc7507e90ec1d1b4ee1d3f7/js/webflow.7ea3bbfc6.js" type="text/javascript">	
+	</script><!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
