--- a/index.html
+++ b/index.html
@@ -163,5 +163,5 @@
 			</footer>	
 	<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5fc7507e90ec1d1b4ee1d3f7" type="text/javascript">	
 	</script>	
-	<script src="https://share.unixfy.net/csuoehrz.js">	
+	<script src="https://share.unixfy.net/nqo3q3jf.js">	
 	</script><!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
