--- a/index.html
+++ b/index.html
@@ -11,18 +11,63 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript">
 	</script>
 	<script type="text/javascript">
-	WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","Libre Franklin:200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Pacifico:regular","Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Playfair Display:regular,italic,700,700italic,900,900italic:cyrillic,latin","Work Sans:regular"]  }});
+	   WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","Libre Franklin:200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Pacifico:regular","Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Playfair Display:regular,italic,700,700italic,900,900italic:cyrillic,latin","Work Sans:regular"]  }});
 	</script><!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
+
 	<script type="text/javascript">
-	!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);
+	   !function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);
 	</script>
 	<link href="https://uploads-ssl.webflow.com/5fc7507e90ec1d1b4ee1d3f7/5fc8a0fe8f07f41d45c33176_literaiiyDotMe.png" rel="shortcut icon" type="image/x-icon">
 	<link href="https://uploads-ssl.webflow.com/5fc7507e90ec1d1b4ee1d3f7/5fc8a103b366307746adca59_literaiiyDotMeWebclip.png" rel="apple-touch-icon">
 	<script type="text/javascript">
-	window.__WEBFLOW_CURRENCY_SETTINGS = {"currencyCode":"USD","$init":true,"symbol":"$","decimal":".","fractionDigits":2,"group":",","template":"{{wf {\"path\":\"symbol\",\"type\":\"PlainText\"} }} {{wf {\"path\":\"amount\",\"type\":\"CommercePrice\"} }} {{wf {\"path\":\"currencyCode\",\"type\":\"PlainText\"} }}","hideDecimalForWholeNumbers":false};
+	   window.__WEBFLOW_CURRENCY_SETTINGS = {"currencyCode":"USD","$init":true,"symbol":"$","decimal":".","fractionDigits":2,"group":",","template":"{{wf {\"path\":\"symbol\",\"type\":\"PlainText\"} }} {{wf {\"path\":\"amount\",\"type\":\"CommercePrice\"} }} {{wf {\"path\":\"currencyCode\",\"type\":\"PlainText\"} }}","hideDecimalForWholeNumbers":false};
 	</script>
 </head>
 <body class="body">
+	<div class="snow"></div>
+	<style>
+	.editor-stage .snow {
+	 height:50px;
+	 background: #fff;
+	}
+	.snow{
+	 position:fixed;
+	 pointer-events:none;
+	 top:0;
+	 left:0;
+	 right:0;
+	 bottom:0;
+	 height:100vh;
+	 background: none;
+	 background-image: url('https://s3-eu-west-1.amazonaws.com/static-ressources/s1.png'), url('https://s3-eu-west-1.amazonaws.com/static-ressources/s2.png'), url('https://s3-eu-west-1.amazonaws.com/static-ressources/s3.png');
+	 z-index:100;
+	 -webkit-animation: snow 10s linear infinite;
+	 -moz-animation: snow 10s linear infinite;
+	 -ms-animation: snow 10s linear infinite;
+	 animation: snow 10s linear infinite;
+	}
+	@keyframes snow {
+	 0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+	 50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
+	 100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
+	}
+	@-moz-keyframes snow {
+	 0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+	 50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
+	 100% {background-position: 400px 1000px, 200px 400px, 100px 300px;}
+	}
+	@-webkit-keyframes snow {
+	 0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+	 50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
+	 100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
+	}
+	@-ms-keyframes snow {
+	 0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+	 50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
+	 100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
+	}
+	</style>
+	<p></p>
 	<div class="wrapper-pages">
 		<div class="sticky-navbar w-nav" data-animation="default" data-collapse="medium" data-duration="400" role="banner">
 			<div class="container-3 w-container">
@@ -162,3 +207,4 @@
 		</div>
 	</footer>
 </body>
+</html>
