--- a/index.html
+++ b/index.html
@@ -206,6 +206,20 @@
 		</div>
 	</footer>
 	<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5fc7507e90ec1d1b4ee1d3f7" type="text/javascript">	
+	</script>	
+	<script src="https://uploads-ssl.webflow.com/5fc7507e90ec1d1b4ee1d3f7/js/webflow.edc3c75e8.js" type="text/javascript">
+
+	<script
+	src = "https://code.jquery.com/jquery-3.5.1.slim.min.js"
+	integrity = "sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+	crossorigin = "anonymous">
 	</script>
+	<script>
+	    $(document).ready(function() {
+		$(".w-webflow-badge").removeClass("w-webflow-badge").empty();
+	    });
+	</script>
+	<!-----------------!>
+	</script><!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
 </html>
