--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<div class="container-3 w-container">
 				<div class="nav-flex">
 					<div>
-						<a class="brand w-nav-brand w--current" href="/"><img alt="" src="https://i.ibb.co/m0Mmj1M/literaiiy-Dot-Me2.png" width="48"></a>
+						<a class="brand w-nav-brand w--current" href="/"><img alt="" src="https://i.ibb.co/m0Mmj1M/literaiiy-Dot-Me2.png" width="96"></a>
 					</div>
 					<div class="link-block-flex">
 						<nav class="nav-menu w-nav-menu" role="navigation">
@@ -190,6 +190,7 @@
 							<a class="link-6" href="http://poinsettia.literaiiy.me">poinsettia</a>
 						</li>
 					</ul>
+				</div>
 				</div>
 				<div>
 					<h2 class="footer-heading">Social</h2>
